2009-04-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix lambda copy in Result class.
	* src/cfsqp.cc,
	* src/ipopt.cc: Fix lambda copy.
	* src/result.cc: By default, the lambda vector is empty.
	* tests/cfsqp.stdout,
	* tests/ipopt-test.stdout: Regenerate reference.

2009-04-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Tag some errors as warnings in CFSQP bridge.
	* src/cfsqp.cc: Tag some errors as warnings.
	* src/result-with-warnings.cc: Fix display.
	* src/solver-warning.cc: Fix display.
	* tests/cfsqp.cc: Expect now a ResultWithWarnings.
	* tests/cfsqp.stdout: Generate output.
	* tests/testsuite.at: CFSQP test not tagged as xfail anymore.

2009-04-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove trailing semi-colon.
	* include/liboptimization/cfsqp.hh,
	* include/liboptimization/derivable-function.hh,
	* include/liboptimization/dummy.hh,
	* include/liboptimization/function.hh,
	* include/liboptimization/fwd.hh,
	* include/liboptimization/ipopt.hh,
	* include/liboptimization/linear-function.hh,
	* include/liboptimization/numeric-linear-function.hh,
	* include/liboptimization/numeric-quadratic-function.hh,
	* include/liboptimization/problem.hh,
	* include/liboptimization/quadratic-function.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/twice-derivable-function.hh,
	* include/liboptimization/util.hh,
	* src/cfsqp.cc,
	* src/generic-solver.cc,
	* src/ipopt.cc,
	* src/util.cc: Here.

2009-04-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Facotize test suite.
	* build-aux/autotest.at: New.
	* build-aux/autotest.mk: Add a dependency on the test
        suite to build-aux/autotest.at.
	* src/ipopt.cc: Remove unwanted fixme.
	* tests/Makefile.am: Rename simple-test into simple
        and ipopt into ipopt-test to avoid name clash.
	* tests/cfsqp.at: Remove.
	* tests/ipopt-test.stdout: New.
	* tests/ipopt.at: Remove.
	* tests/ipopt.stdout: Remove.
	* tests/numeric-linear-function.at: Remove.