@@ -6,6 +6,8 @@ doc: html
 
 html-local: Doxyfile
 	$(DOXYGEN)
+	cp $(top_srcdir)/doc/doxygen.css $(top_srcdir)/doc/tabs.css \
+	$(top_builddir)/doc/html
 
 EXTRA_DIST = Doxyfile.in header.html footer.html \
 	package.css doxygen.css tabs.css
